# confpickem

./: .gitignore  CLI_README.md  LICENSE  MIGRATION.md  README.md  README_OPTIMIZATION.md  VALIDATION_PLAN.md  analyze_player_skills.py  apply_realistic_skills.py  check_available_weeks.py  conftest.py  current_player_skills.json  optimize_mid_week.py  optimize_mid_week_live_odds.py  optimize_ultra_fast.py  optimize_week1_mid_week.py  optimize_week1_ultra_fast.py  optimize_with_live_odds.py  player_skills_2024.json  pyproject.toml  test_picks.py  test_picks_midweek.py  win_probability_live_odds.py  win_probability_simple.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish.yml  test.yml
examples/: pickem_example.py  yahoo_pickem_demo.ipynb
src/confpickem/: __init__.py  analyze_player_skills.py  apply_realistic_skills.py  cli.py  confidence_pickem_sim.py  core.py  live_odds_scraper.py  player-stats.py  teams.py  yahoo_pickem_integration.py  yahoo_pickem_optimization.py  yahoo_pickem_scraper.py
src/confpickem/cli/: README.md  optimize.py  player_skills.py  win_probability.py
tests/: test_cli.py  test_confidence_pickem_sim.py  test_core.py  test_live_odds_scraper.py  test_optimization_logic.py  test_player_skills.py  test_yahoo_pickem_scraper.py
